DP-3822 - fixing alignment issue with sticky nav

--- a/styleguide/source/assets/scss/02-molecules/_sticky-nav.scss
+++ b/styleguide/source/assets/scss/02-molecules/_sticky-nav.scss
@@ -4,7 +4,6 @@
 
 .ma__sticky-nav {
   @include clearfix;
-  margin-bottom: 30px;
   position: relative;
   transition: top .3s;
   width: 100%;
