--- a/styleguide/source/assets/scss/03-organisms/_jump-links.scss
+++ b/styleguide/source/assets/scss/03-organisms/_jump-links.scss
@@ -85,8 +85,8 @@
     overflow: hidden;
     position: absolute;
       right: 10px;
-      top: 14px;
-    transition: all .2s ease;
+      top: 9px;
+    transition: transform .2s ease;
     transform-origin: center center;
     z-index: 1;
 
@@ -151,7 +151,10 @@
 
     a {
       @include ma-link-underline;
-      line-height: 1.5;
+
+      @media ($bp-small-min) {
+        line-height: 1.5;
+      }
     }
 
     @media ($bp-small-max) {
